tools/tests/errors/surf_lib_09.ki
# Lookbehind would break the linear-time guarantee and is rejected.
var r = import("regex")
discard r.compile("(?<=abc)")
